--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -12,5 +12,7 @@
   --info-color: #39a1ee;
   --info-color-hover: hsl(from var(--info-color) h s calc(l - 15));
 
+  --placeholder-color: #9a9a9a;
+
   --border-radius: 4px;
 }
