✨  composable update item

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -76,3 +76,17 @@ button {
 svg {
   fill: currentColor;
 }
+
+[popover] {
+  display: initial;
+  position: initial;
+  margin: initial;
+  border: initial;
+  background: initial;
+  padding: initial;
+  width: initial;
+  height: initial;
+  overflow: initial;
+  inset: initial;
+  color: initial;
+}
